--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@
 body {
   padding: 0px;
   margin: 0px;
-  background-color: rgba(51, 51, 51, 0.9);
+  background-color: #3b3b98;
 
 }
 
@@ -125,13 +125,20 @@ body {
   border-radius: 4px;
   font-size: 1.1rem;
   font-weight: 600;
-  box-shadow: 0px 3px 5px 0px cadetblue;
+  box-shadow: 0px 3px 5px 0px #2d2d73;
 }
 
 .map_btns:hover {
-  background-color: cadetblue;
+  background-color: #2d2d73;
   color: white;
   transition: 0.7s;
 }
 
 /* map section end */
+
+.show_temp {
+  width: 100%;
+  font-size: 3rem;
+  font-weight: 600;
+  color: #fff;
+}
